<resources>
    <string name="app_name">LoginWithSqlite</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Login Screen</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="signin">Sign in</string>
    <string name="signup">Sign up</string>
    <string name="exit">Exit</string>
    <string name="deadline">Deadline:</string>

    <string name="hello_world2">Register Screen</string>
    <string name="email">Email:</string>
    <string name="register">Register</string>
    <string name="cancle">Cancle</string>
    <string name="title_activity_users_list">UsersListActivity</string>
</resources>
